--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.2",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "use-local-storage-state": "^18.3.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
