--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.8",
