--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading": "^2.0.3",
     "styled-components": "^6.0.2",
     "swr": "^2.2.0",
     "use-local-storage-state": "^18.3.3"
